ui: work on design

--- a/src/ui/infra/GlobalNavigation.pug
+++ b/src/ui/infra/GlobalNavigation.pug
@@ -92,8 +92,9 @@ style.
 		align-items flex-start
 		background var(--color-paper-callout)
 		display flex
-		flex 0 0 240px
+		flex 0 0 160px
 		flex-flow column nowrap
+		font-size 0.75em
 		height 100%
 		padding 1em
 	.global-nav-scroll-area
