--- a/src/ui/product/post/Comment.pug
+++ b/src/ui/product/post/Comment.pug
@@ -47,7 +47,7 @@ style.
 	.comment
 		display flex
 		gap 1ch
-		margin-top 30px
+		margin-top 2.25em
 		position relative
 	.comment-body
 		max-width 590px
@@ -78,4 +78,4 @@ style.
 			opacity 0.5
 	.comment-more-replies
 	.comment-replies
-		margin-top 30px
+		margin-top 2.25em
