--- a/src/ui/product/post/Flair.pug
+++ b/src/ui/product/post/Flair.pug
@@ -4,7 +4,8 @@ script.
 	export rich_text = null
 	export text = null
 
-span.flair(style="background: {color || 'orangered'}; color: {color ? (new Color(color)).asContrastHex() : 'white'}")
+span.flair
+	.flair-color(style="background: {color || 'orangered'}; color: {color ? (new Color(color)).asContrastHex() : 'white'}")
 	{#if rich_text && rich_text.length}
 		{#each rich_text as segment}
 			{#if segment.e === 'text'}
@@ -20,6 +21,9 @@ style.
 		border-radius 99px
 		display inline-flex
 		gap 1ch
-		padding 0 1em
+	.flair-color
+		aspect-ratio 1
+		border-radius 50%
+		height 16px
 	.flair-emoji
 		height 16px
