--- a/src/ui/product/subreddit/Subreddit.pug
+++ b/src/ui/product/subreddit/Subreddit.pug
@@ -30,7 +30,7 @@ style.
 	.subreddit-nav
 		height 100%
 		overflow-y auto
-		padding 2em
-		width 20vw
+		padding 2em 0
+		width 320px
 		&::-webkit-scrollbar
 			display none
