--- a/src/ui/product/subreddit/Wiki.pug
+++ b/src/ui/product/subreddit/Wiki.pug
@@ -53,8 +53,17 @@ style.
 		&::-webkit-scrollbar
 			display none
 	:global(.wiki-page .toc > ul)
-		background var(--color-paper-callout)
-		padding 3em 2em !important
+		padding 2.25em 1.5em !important
+		position relative
+		&::before
+			background rgba(0,0,0,0.1)
+			content 'Table of Contents'
+			line-height 2
+			opacity 0.5
+			padding 0 0.25em
+			position absolute
+			text-transform uppercase
+			top -1em
 	:global(.wiki-page .toc li)
 		margin-top 1em
 	:global(.wiki-page .toc ol)
