--- a/src/ui/stylesheet.styl
+++ b/src/ui/stylesheet.styl
@@ -4,6 +4,21 @@
 	font-style normal
 	font-weight 400
 	src url('./font_comic_neue_400.woff2')
+@font-face
+	font-family 'Comic Neue'
+	font-style italic
+	font-weight 400
+	src url('./font_comic_neue_400_i.woff2')
+@font-face
+	font-family 'Comic Neue'
+	font-style normal
+	font-weight 700
+	src url('./font_comic_neue_700.woff2')
+@font-face
+	font-family 'Comic Neue'
+	font-style italic
+	font-weight 700
+	src url('./font_comic_neue_700_i.woff2')
 html
 	--typeface-prop 'Comic Neue', 'UD Digi Kyokasho NK-R', 'Arial', sans-serif
 	--typeface-mono 'Roboto Mono', 'Cascadia Mono', 'Consolas', monospace
@@ -19,7 +34,7 @@ html
 	--color-control rgba(0,0,0,0.05)
 	--color-control-focused rgba(0,0,0,0.10)
 	--color-control-toggled rgba(0,0,0,0.50)
-	--color-paper white
+	--color-paper #fff2e7
 	--color-paper-action aliceblue
 	--color-paper-border gainsboro
 	--color-paper-callout rgba(0,0,0,0.05)
@@ -53,6 +68,8 @@ html
 	box-sizing border-box
 *:focus
 	outline-color var(--color-writing-highlight)
+.md
+	overflow-wrap anywhere
 line-width-reg = 640px
 
 // Body
@@ -62,7 +79,7 @@ body
 	display flex
 	font 14px/1.5 var(--typeface-prop)
 	height 100vh
-	letter-spacing 0.04em
+	letter-spacing .777px
 	margin 0
 
 // Paragraphs
@@ -70,20 +87,17 @@ p
 	margin 0.5em 0 0 0
 	max-width line-width-reg
 hr
-	border 1px dotted
+	border 1px solid rgba(0,0,0,0.1)
 	margin 1em 0 0 0
 	max-width line-width-reg
 
 // Formatted text
 a
-	color var(--color-writing-action)
-	text-decoration none
+	color inherit
 	overflow-wrap anywhere
-a:not(:is(a[href^='/'], a[href^='#']))::before
-	content '↗️' / 'External link'
-	font bold 0.8em 'Meiryo'
-	margin-inline-end 1ch
-	opacity 0.8
+a[href^='/']
+a[href^='#']
+	text-decoration underline
 address
 	font-style normal
 
@@ -94,7 +108,7 @@ blockquote
 	margin 0.5em 0 0 2px
 	max-width line-width-reg
 	opacity 0.8
-	padding 0.5em
+	padding 0 0.5em
 code
 pre
 	background var(--color-paper-callout)
@@ -103,8 +117,9 @@ pre
 	overflow-wrap anywhere
 	white-space pre-wrap
 code
-	padding 0.25em
+	padding 0 0.25em
 pre
+	border 1px solid
 	display inline-block
 	padding 1em
 	& code
@@ -114,8 +129,8 @@ pre
 .md-spoiler-text
 	background var(--color-writing)
 	cursor text
-	padding 0.05em 0
-	opacity 0.5
+	padding 0.05em 0.25em
+	opacity 0.77
 	& a
 		opacity 0
 	&:hover
@@ -166,11 +181,15 @@ h6
 table
 	font-size 12px
 	margin 0.5em 0 0 0
-td
-	border-top 1px solid
+	overflow-wrap normal
+tr:nth-child(odd)
+	background rgba(0,0,0,0.05)
+	thead &
+		background rgba(0,0,0,0.5)
+		color white
 td
 th
-	padding 0
+	padding 0 3px
 	vertical-align top
 
 // Media
