ui: work on design

--- a/src/ui/product/listing/PostList.pug
+++ b/src/ui/product/listing/PostList.pug
@@ -2,13 +2,14 @@ script.
 	import Headline from '../post/Headline.pug'
 	export multireddit = false
 	export select = null
+	export selection = null
 	export short_ids = null
 
 h3 Posts
 ol.post-list
 	{#if short_ids}
 		{#each short_ids as short_id}
-			Headline(post_short_id={short_id} select={select} show_subreddit={multireddit})
+			Headline(post_short_id={short_id} select={select} selected={selection === short_id} show_subreddit={multireddit})
 
 style.
 	.post-list
