--- a/src/ui/product/post/Score.pug
+++ b/src/ui/product/post/Score.pug
@@ -5,20 +5,26 @@ script.
 	if Number.isFinite(value)
 		value = value + vote
 		color_class = switch
-			when vote == 1 then 'upvoted'
-			when vote == -1 then 'downvoted'
 			when value >= 2 then 'positive'
-			when value == 1 then 'neutral'
-			else 'negative'
+			when value <= 0 then 'negative'
+			else 'neutral'
 		display_value = switch
 			when value >= 1000 then Math.trunc(value / 1000) + 'k'
 			when value >= -1000 then value
 			else Math.ceil(value / 1000) + 'k'
 		size_class = if Math.abs(value) >= 1000 then 'thousands' else 'ones'
+		vote_icon =
+			switch
+				when value >= 10 then '▲'
+				when value >= 2 then '△'
+				when value <= 0 then '▽'
+				when value <= -10 then '▼'
+				else '○'
 	else
 		color_class = 'neutral'
 		display_value = '?'
 		size_class = 'ones'
+		vote_icon = '○'
 	toggle_downvote = ->
 		if vote == -1 then vote = 0 
 		else vote = -1
@@ -28,22 +34,19 @@ script.
 		else vote = 1
 		upload_vote(vote)
 
-button.score(class='score-color-{color_class}' class='score-size-{size_class}' on:click={() => toggle_upvote()} on:contextmenu={() => toggle_downvote()}) {display_value}
+button.score(class='score-color-{color_class}' class='score-size-{size_class}' on:click={() => toggle_upvote()} on:contextmenu={() => toggle_downvote()} title={display_value}) {vote_icon}
 
 style.
 	.score
-		background var(--color-paper-action)
+		font-size 18px
+		width 11px
 	.score-size-ones
 		font-size 0.75em
 	.score-size-thousands
 		font-size 1em
-	.score-color-downvoted
-		color cornflowerblue
 	.score-color-negative
 		color red
 	.score-color-neutral
-		color var(--color-paper-border)
+		color rgba(0,0,0,0.5)
 	.score-color-positive
 		color var(--color-writing-action)
-	.score-color-upvoted
-		color chartreuse
