--- a/src/ui/stylesheet.styl
+++ b/src/ui/stylesheet.styl
@@ -19,6 +19,11 @@
 	font-style italic
 	font-weight 700
 	src url('./font_comic_neue_700_i.woff2')
+@font-face
+	font-family 'Inter'
+	font-style normal italic
+	font-weight 100 900
+	src url('./font_inter_100_900.woff2')
 html
 	--typeface-prop 'Comic Neue', 'UD Digi Kyokasho NK-R', 'Arial', sans-serif
 	--typeface-mono 'Roboto Mono', 'Cascadia Mono', 'Consolas', monospace
@@ -81,11 +86,13 @@ body
 	height 100vh
 	letter-spacing .777px
 	margin 0
+	font 13px/18px Inter
+	letter-spacing -0.003em
+	font-feature-settings 'calt' 0, 'cv02' 1, 'cv05' 1
 
 // Paragraphs
 p
-	margin 0.5em 0 0 0
-	max-width line-width-reg
+	margin 0.7em 0 0 0
 hr
 	border 1px solid rgba(0,0,0,0.1)
 	margin 1em 0 0 0
@@ -104,7 +111,7 @@ address
 // Verbatim text
 blockquote
 	border-left 3px solid var(--color-paper-border)
-	font-size 12px
+	color green
 	margin 0.5em 0 0 2px
 	max-width line-width-reg
 	opacity 0.8
