--- a/src/ui/product/post/Post.pug
+++ b/src/ui/product/post/Post.pug
@@ -173,6 +173,7 @@ style.
 		font-size 14px
 		letter-spacing -0.006em
 		line-height 20px
+		margin-top 0.7em
 		width 600px
 	:global(.post-selftext-media)
 		width 480px
