--- a/src/ui/product/listing/PostList.pug
+++ b/src/ui/product/listing/PostList.pug
@@ -5,7 +5,6 @@ script.
 	export selection = null
 	export short_ids = null
 
-h3 Posts
 ol.post-list
 	{#if short_ids}
 		{#each short_ids as short_id}
@@ -15,4 +14,4 @@ style.
 	.post-list
 		display flex
 		flex-flow column nowrap
-		gap 1em
+		gap 1ch
