--- a/src/ui/product/post/Tag.pug
+++ b/src/ui/product/post/Tag.pug
@@ -15,8 +15,8 @@ data.tag(class='tag-{name}' title={description}) {name}
 style.
 	.tag
 		border-radius 0.25em
-		font-size 12px
-		font-feature-settings 'calt' 0, 'cpsp' 1, 'cv02' 1, 'cv05' 1
+		font-size 10px
+		font-feature-settings 'cpsp' 1
 		padding 0 0.25em
 		text-transform uppercase
 	.tag-archived
